--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
         }
         @media(max-width:850px){
             main{
-                width: 80%;
+                width: 90%;
             }
             .fundo-amarelo{
                 background-color: #e9ecc8;
                 width: 40%;
             }
+            .curriculo{
+                margin-left: 1em;
         }
     </style>
 </head>
